[package]
name = "kod_jam"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]
native = ["bevy/bevy_wgpu", "winit/x11"]
web = ["bevy_webgl2"]
audio = ["bevy/bevy_audio", "bevy/vorbis"]

[dependencies]
bevy = { version = "0.4", default-features = false }
bevy_webgl2 = { version = "0.4", optional = true }
winit = { version = "0.24.0", features = ["web-sys", "x11"], default-features = false }
#bevy_tilemap = "0.2"

[patch.crates-io]
bevy = { git = "https://github.com/aQaTL/bevy.git", rev = "b93f13ad4cfd961a5adc99d77ab2317fbe20bb98" }
#bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap.git", rev = "b0a5b0b918d42a6404171d3732fb6afddbaf7642" }
